# hindi-readability

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
data/: validation_dataset.csv
hindi_readability/: __init__.py  formulas.py  scorer.py  script.py
hindi_readability.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_all.py
validation/: validate.py
